# kubeflow-sample

./: .gitignore  Makefile  README.md  pyproject.toml
kubeflow-pipeline/: README.md  pyproject.toml
kubeflow-pipeline/kubeflow_pipeline/: __main__.py  pipeline_registory.py
kubeflow-pipeline/kubeflow_pipeline/comands/: argparse.py  runner.py
kubeflow-pipeline/kubeflow_pipeline/pipelines/: iris.py
kubeflow-pipeline/tests/: test_kubeflow_pipeline.py
kubeflow-preprocessor/: Dockerfile  Makefile  README.md  pyproject.toml
kubeflow-preprocessor/kubeflow_preprocessor/: __main__.py
kubeflow-preprocessor/kubeflow_preprocessor/components/: iris.py
kubeflow-preprocessor/tests/: test_kubeflow_preprocesser.py
kubeflow-trainer/: Dockerfile  Makefile  README.md  pyproject.toml
kubeflow-trainer/kubeflow_trainer/: __main__.py
kubeflow-trainer/kubeflow_trainer/components/: iris.py
kubeflow-trainer/tests/: test_kubeflow_trainer.py
kubeflow_sample/: pipeline.py
notebooks/: ex_iris_1_pre.ipynb  ex_iris_1_train.ipynb
tests/: test_kubeflow_sample.py
