[tool.poetry]
name = "kubeflow-sample"
version = "0.1.0"
description = ""
authors = ["ya-mori <ppap.yohei.moriya@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.0.15"
kubeflow-trainer = {path = "kubeflow-trainer"}
kubeflow-pipeline = {path = "kubeflow-pipeline"}
kubeflow-preprocessor = {path = "kubeflow-preprocessor"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.5b1"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
